BUG FIX: toggle not visible on light mode

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -59,7 +59,7 @@ body {
   background-size: cover;
 }
 
-input,
+input:not(.form-check-input),
 select,
 textarea,
 label::after,
